--- a/views/careers.handlebars
+++ b/views/careers.handlebars
@@ -46,3 +46,63 @@
         </div>
     </div>
 </div>
+<div class="form careers">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-4 text">
+                <h2>EMPLOYMENT APPLICATION</h2>
+                <hr>
+                <p>If you're interested in starting a rewarding career, apply here!</p>
+                <p><i>We expect all our employees have a driver's license, insurance and a relatable way to get to work every day!</i></p>
+            </div>
+            <div class="col-12 col-lg-8">
+                <form action="https://formsubmit.co/mmeganshaw@gmail.com" method="POST" enctype="multipart/form-data">
+                    <div class="d-none">
+                        <input type="text" name="careers-form">
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-lg-6">
+                            <label for="firstName">First Name</label>
+                            <input id="firstName" type="text" name="first-name" class="form-control" placeholder="John">
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <label for="lastName">Last Name</label>
+                            <input id="lastName" type="text" name="last-name" class="form-control" placeholder="Smith">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <label for="email">Email</label>
+                            <input id="email" type="email" class="form-control" placeholder="johnsmith21@gmail.com" name="email" >
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <label for="tel">Phone Number</label>
+                            <input id="tel" type="tel" class="form-control" placeholder="123-456-7890" name="phone" >
+                        </div>
+                    </div>
+                     <div class="row">
+                        <div class="col">
+                            <label for="why">Why Should We Hire You?</label>
+                            <textarea rows="3" id="why" class="form-control" placeholder="I've been in the landscaping business for 8 years and I'm a hard worker." name="why" ></textarea>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col resume">
+                            <label for="resume">Resume Upload</label>
+                            <input id="resume" type="file" name="resume" style="margin-bottom: 0;"/>
+                            <small id="resumeHelp" class="form-text">Files must not exceed 5MB. Any file over this can be emailed to cdddschlunt@adelphia.net.</small>
+                        </div>
+                    </div>
+                    <input type="text" name="_honey" style="display:none">
+                    <div class="row">
+                        <div class="col">
+                            <button class="btn" type="submit">Submit</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
