--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -9,3 +9,85 @@
         </div>
     </div>
 </div>
+<div class="contact-three-col">
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-12">
+                <h2>CONTACT US</h2>
+            </div>
+            <div class="col-12 col-lg-4">
+                <div class="text-container phone">
+                    <img src="/public/images/phone.svg" alt="phone icon">
+                    <hr>
+                    <a href="tel:4404526697"><h3>440-452-6697</h3></a>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4">
+                <div class="text-container arrow">
+                     <img src="/public/images/arrow-down-solid.svg" alt="arrow down">
+                    <hr>
+                    <h3>Form Below</h3>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4">
+                <div class="text-container mail">
+                    <img src="/public/images/mail.svg" alt="mail icon">
+                    <hr>
+                    <a href="mailto:cdddschlunt@adelphia.net"><h3>cdddschlunt@adelphia.net</h3></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="form contact">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-4 text">
+                <h2>CONTACT FORM</h2>
+                <hr>
+                <p>Have a question or inquiry regarding any of the services listed on our website? This is the place to submit a message!</p>
+            </div>
+            <div class="col-12 col-lg-8">
+                <form action="https://formsubmit.co/mmeganshaw@gmail.com" method="POST" enctype="multipart/form-data">
+                    <div class="d-none">
+                        <input type="text" name="contact-form">
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-lg-6">
+                            <label for="firstName">First Name</label>
+                            <input id="firstName" type="text" name="first-name" class="form-control" placeholder="John">
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <label for="lastName">Last Name</label>
+                            <input id="lastName" type="text" name="last-name" class="form-control" placeholder="Smith">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <label for="email">Email</label>
+                            <input id="email" type="email" class="form-control" placeholder="johnsmith21@gmail.com" name="email" >
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <label for="tel">Phone Number</label>
+                            <input id="tel" type="tel" class="form-control" placeholder="123-456-7890" name="phone" >
+                        </div>
+                    </div>
+                     <div class="row">
+                        <div class="col">
+                            <label for="why">How Can We Help?</label>
+                            <textarea id="why" class="form-control" placeholder="I have a landscaping project I'd like to speak with you about." name="why" ></textarea>
+                        </div>
+                    </div>
+                    <input type="text" name="_honey" style="display:none">
+                    <div class="row">
+                        <div class="col">
+                            <button class="btn" type="submit">Submit</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
