--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -9,6 +9,61 @@
         </div>
     </div>
 </div>
+<div class="about-main">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="top-img"></div>
+            </div>
+            <div class="col-12">
+                <h2>About Us</h2>
+                <p> Business As Usual is a family owned local business with roots in Westlake for over 30 years. We aren’t just your landscaper we are your neighbor and we are proud to make our community a beautiful place! Our staff are all extremely knowledgeable and kind. Everyone’s passion here at Business As Usual is creating and maintaining beautiful properties. With 30 years of experience we can do anything you dream of and give you a quality product you are proud to show off. We have won multiple awards including second place in the Westlake in Bloom contest and are ready to make your property the next award winner.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="about-four-col">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2>OUR SERVICES</h2>
+            </div>
+            <div class="col-12 col-lg-3">
+                <div class="text-container">
+                    <h3>Lawn Maintenance</h3>
+                    <a class="btn" href="/services/lawn-maintenance">View Page</a>
+                </div>
+            </div>
+             <div class="col-12 col-lg-3">
+                <div class="text-container">
+                    <h3>Landscape Installation</h3>
+                    <a class="btn" href="/services/landscape-install">View Page</a>
+                </div>
+            </div>
+             <div class="col-12 col-lg-3">
+                <div class="text-container">
+                    <h3>Snow Removal & Ice Control</h3>
+                    <a class="btn" href="/services/snow-ice">View Page</a>
+                </div>
+            </div>
+             <div class="col-12 col-lg-3">
+                <div class="text-container">
+                    <h3>Landscape Design</h3>
+                    <a class="btn" href="/services/landscape-design">View Page</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="about-main">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="bottom-img"></div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="cta-band lightgreen">
     <div class="container">
         <div class="row">
