--- a/public/css/style.css
+++ b/public/css/style.css
@@ -684,7 +684,9 @@ body .navbar .navbar-brand img {
     letter-spacing: 0.51px;
     line-height: 55px;
 
+
 }
+
 
 @media (min-width: 992px) {
     .interior-banner p {
@@ -733,6 +735,9 @@ body .navbar .navbar-brand img {
     border-top: 3px solid #2AB746; 
     width: 91px;
     margin: 0.25rem 0 1rem;
+}
+.inner-banner h2 {
+    color: white;
 }
 
 
@@ -1000,4 +1005,95 @@ body .navbar .navbar-brand img {
     .about-four-col .text-container {
         margin-bottom: 2rem;
     }
+}
+
+.gallery-four-col {
+    padding: 63px 0 77px;
+}
+.gallery-four-col h2{
+    font-weight: bold;
+    color: #0A1F0F;
+}
+.gallery-four-col hr {
+    width: 91px;
+    border-top: 3px solid #0A1F0F;
+    margin-bottom: 2.5rem;
+}
+.gallery-four-col .text-container {
+    text-align: center;
+    padding: 22px;
+    border-radius: 26px;
+}
+.gallery-four-col a {
+    color: white !important;
+}
+.gallery-four-col a:hover {
+    text-decoration: underline;
+}
+.gallery-four-col .text-container.lawn-maint {
+    background-color:#176426;
+}
+.gallery-four-col .text-container.landsc-install {
+    background-color:#0A1F0F;
+}
+.gallery-four-col .text-container.snow-ice {
+    background-color:#246A8F;
+}
+.gallery-four-col .text-container.landsc-design {
+    background-color:#194861;
+}
+
+@media (max-width: 991px) {
+    .gallery-four-col .text-container {
+        margin-bottom: 1rem;
+    }
+}
+
+.gallery-sections {
+    padding: 64px 0;
+}
+.gallery-sections#lawnMaintenance {
+    background-color: #176426;
+}
+.gallery-sections#landscapeInstall {
+    background-color: #0A1F0F;
+}
+.gallery-sections#snowRemoval {
+    background-color: #256A8F;
+}
+.gallery-sections#landscapeDesign {
+    background-color: #194861;
+}
+.gallery-sections .btn {
+    background-color: white !important;
+}
+.gallery-sections#lawnMaintenance .btn {
+    color:  #176426 !important;
+}
+.gallery-sections#landscapeInstall .btn {
+    color: #0A1F0F !important;
+}
+.gallery-sections#snowRemoval .btn {
+    color: #256A8F !important;
+}
+.gallery-sections#landscapeDesign .btn{
+    color: #194861 !important;
+}
+@media (hover:hover) {
+    .gallery-sections .btn:hover {
+        background-color: lightgrey !important;
+    }
+}
+
+.gallery-sections h2 {
+    color: white;
+    margin-bottom: 1.5rem;
+    font-weight: bold;
+}
+
+.gallery-sections img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    margin-bottom: 1.5rem;
 }
