--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -1,1 +1,226 @@
-<h1>Gallery</h1>
+<div class="inner-banner lighter-blue">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-8">
+                <h1>Photo Gallery</h1>
+                <p>See below for an extensive catalogue of photos </br>relevant to projects we've esuccessfully completed!</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="gallery-four-col">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2>JUMP TO SECTION</h2>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-3">
+                <a href="#lawnMaintenance">
+                    <div class="text-container lawn-maint">
+                        <h3>Lawn </br>Maintenance</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="col-12 col-lg-3">
+                <a href="#landscapeInstall">
+                    <div class="text-container landsc-install">
+                        <h3>Landscape Installation</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="col-12 col-lg-3">
+                <a href="#snowRemoval">
+                    <div class="text-container snow-ice">
+                        <h3>Snow Removal </br> & Ice Control</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="col-12 col-lg-3">
+                <a href="#landscapeDesign">
+                    <div class="text-container landsc-design">
+                        <h3>Landscape </br>Design</h3>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="gallery-sections" id="lawnMaintenance">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2>Lawn Maintenance</h2>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <div class="col-12 col-lg-4">
+                <a href="public/images/lawn-maintenance/maint-1.png" data-lightbox="maintenance">
+                    <img src="public/images/lawn-maintenance/maint-1.png" class="img-fluid" alt="lawn maintenance">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="public/images/lawn-maintenance/maint-2.png" data-lightbox="maintenance">
+                    <img src="public/images/lawn-maintenance/maint-2.png" class="img-fluid" alt="lawn maintenance">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/lawn-maintenance/maint-3.jpeg" data-lightbox="maintenance">
+                    <img src="public/images/lawn-maintenance/maint-3.jpeg" class="img-fluid" alt="lawn maintenance">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="public/images/lawn-maintenance/maint-4.jpeg" data-lightbox="maintenance">
+                    <img src="public/images/lawn-maintenance/maint-4.jpeg" class="img-fluid" alt="lawn maintenance">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="public/images/lawn-maintenance/maint-5.jpeg" data-lightbox="maintenance">
+                    <img src="public/images/lawn-maintenance/maint-5.jpeg" class="img-fluid" alt="lawn maintenance">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="public/images/lawn-maintenance/maint-6.png" data-lightbox="maintenance">
+                    <img src="public/images/lawn-maintenance/maint-6.png" class="img-fluid" alt="lawn maintenance">
+                </a>
+            </div>
+        </div>
+        <div class="row">
+             <div class="col-12 text-center"><a class="btn" href="/services/lawn-maintenance">Lawn Maintenance</a></div>
+        </div>
+    </div>
+</div>
+<div class="gallery-sections" id="landscapeInstall">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2>Landscape Installation</h2>
+            </div>
+        </div>
+       <div class="row d-flex justify-content-center">
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-1.png" data-lightbox="install">
+                    <img src="/public/images/install/install-1.png" class="img-fluid" alt="landscape installation">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-2.jpeg" data-lightbox="install">
+                    <img src="/public/images/install/install-2.jpeg" class="img-fluid" alt="landscape installation">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-3.jpeg" data-lightbox="install">
+                    <img src="/public/images/install/install-3.jpeg" class="img-fluid" alt="lancscape installation">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-4.jpeg" data-lightbox="install">
+                    <img src="/public/images/install/install-4.jpeg" class="img-fluid" alt="landscape installation">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-5.jpeg" data-lightbox="install">
+                    <img src="/public/images/install/install-5.jpeg" class="img-fluid" alt="landscape installation">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-6.jpeg" data-lightbox="install">
+                    <img src="/public/images/install/install-6.jpeg" class="img-fluid" alt="landscape installation">
+                </a>
+            </div>
+        </div>
+        <div class="row">
+             <div class="col-12 text-center"><a class="btn" href="/services/landscape-install">Landscape Installation</a></div>
+        </div>
+    </div>
+</div>
+<div class="gallery-sections" id="snowRemoval">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2>Snow Removal & Ice Control</h2>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/snow/snow-1.jpeg" data-lightbox="snow">
+                    <img src="/public/images/snow/snow-1.jpeg" class="img-fluid" alt="snow ice">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/snow/snow-2.jpeg" data-lightbox="snow">
+                    <img src="public/images/lawn-maintenance/maint-2.png" class="img-fluid" alt="snow ice">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/snow/snow-3.png" data-lightbox="snow">
+                    <img src="/public/images/snow/snow-3.png"  class="img-fluid" alt="snow ice">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/snow/snow-4.png" data-lightbox="snow">
+                    <img src="/public/images/snow/snow-4.png" class="img-fluid" alt="snow ice">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/snow/snow-5.png" data-lightbox="snow">
+                    <img src="/public/images/snow/snow-5.png" class="img-fluid" alt="snow ice">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/snow/snow-6.jpeg" data-lightbox="snow">
+                    <img src="/public/images/snow/snow-6.jpeg" class="img-fluid" alt="snow ice">
+                </a>
+            </div>
+        </div>
+        <div class="row">
+             <div class="col-12 text-center"><a class="btn" href="/services/snow-removal">Snow Removal & Ice Control</a></div>
+        </div>
+    </div>
+</div>
+<div class="gallery-sections" id="landscapeDesign">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2>Landscape Design</h2>
+            </div>
+        </div>
+         <div class="row d-flex justify-content-center">
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/design/design-1.png" data-lightbox="design">
+                    <img src="/public/images/design/design-1.png" class="img-fluid" alt="landscape design">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/design/design-2.png" data-lightbox="design">
+                    <img src="/public/images/design/design-2.png" class="img-fluid" alt="landscape design">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/design/design-3.jpeg" data-lightbox="design">
+                    <img src="/public/images/design/design-3.jpeg"  class="img-fluid" alt="landscape design">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/design/design-4.jpeg" data-lightbox="design">
+                    <img src="/public/images/design/design-4.jpeg" class="img-fluid" alt="landscape design">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/design/design-5.png" data-lightbox="design">
+                    <img src="/public/images/design/design-5.png" class="img-fluid" alt="landscape design">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/design/design-6.png" data-lightbox="design">
+                    <img src="/public/images/design/design-6.png" class="img-fluid" alt="landscape design">
+                </a>
+            </div>
+        </div>
+        <div class="row">
+             <div class="col-12 text-center"><a class="btn" href="/services/landscape-design">Lawndscape Design</a></div>
+        </div>
+    </div>
+</div>
